fix: scrollBar

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -16,3 +16,23 @@
 .page_overflow {
   overflow: hidden;
 }
+
+/* Я просто решил закастомить скролл, могу удалить, если потребуете */
+
+body::-webkit-scrollbar {
+  width: 3px;
+}
+
+body::-webkit-scrollbar-track {
+  background: black;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: white;
+  opacity: 0.6;
+  border-radius: 15px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: grey;
+}
